# inferenza

./: .gitignore  Cargo.toml  README  README.md  build.rs
docs/examples/gaussian_nb/: gaussian_nb.ipynb
docs/examples/kmeans/: kmeans.ipynb  kmeans.json
docs/examples/supervised/: logistic_regression.ipynb
docs/examples/supervised/gaussian_nb/: 1.9.1_gaussian_nb.ipynb
docs/examples/supervised/linear/: 1.1.1_ordinary-least-squares.ipynb
docs/examples/unsupervised/clustering/: 2.3.2_kmeans.ipynb
src/: lib.rs
src/inferenza/: mod.rs  utils.rs
src/inferenza/sk/: mod.rs
src/inferenza/sk/clustering/: kmeans.rs  mod.rs
src/inferenza/sk/naive_bayes/: gaussian_nb.rs  mod.rs
src/inferenza/sk/supervised/: mod.rs
src/inferenza/sk/supervised/linear/: linear_regression.rs  mod.rs
src/inferenza/sk/supervised/naive_bayes/: gaussian_nb.rs
src/sk/clustering/: kmeans.rs
tests/resources/: gaussian_nb.onnx  kmeans.onnx  linear_regression.onnx
